2008-10-24 yusei
* Cleaned up Base_getTranslatedWorkflowStateItemList and separate generic function to Base_getWorkflowStateItemList.

2008-10-24 yusei
* Fixed Folder_generateWorkflowReport. This did not work if there is interaction workflow.

2008-10-22 Romain
* portal_transforms subobject should exported with the path parameter of the business template
* Add png_to_text transformation

2008-10-20 Thibaut
* Allow portal_transforms to extract content.xml file from odt file (zip file).

2008-10-16 Nicolas
* Allow portal_transforms to convert html content to odt, pdf, doc by using oood

2008-10-14 yusei
* Start to develop version 5.3.

2008-09-24 yusei
* Update xml format.

2008-09-16 Kazuhiko
* move Divergence Tester, Delivery Builder, Delivery Tool, Order Builder, Order Tool, delivery_causality_interaction_workflow, delivery_causality_workflow, delivery_movement_causality_interaction_workflow, delivery_movement_simulation_interaction_workflow, delivery_simulation_interaction_workflow, order_movement_simulation_interaction_workflow, order_simulation_interaction_workflow and simulation_movement_causality_interaction_workflow from erp5_core to erp5_base.

2008-09-09 yusei
* Fixed wrong messages.

2008-09-07 yusei
* Replace "+" with " " in translation messages.

2008-09-04 yusei
* Update English messages.

2008-09-03 yusei
* Remove Route Tool portal type which is not used.

2008-08-28 yusei
* Use Base_translateString or translateString instead of N_.

2008-08-11 vincentd
* fix Base_jumpToRelatedObject to avoid a probleme with bad form_id when jumping on a single object

2008-08-06 jerome
* Change Movement_getPriceCalculationOperandDict to use source_section / destination_section instead of source / destination.
* Change Movement_getPriceCalculationOperandDict to give priority to supply lines contained in related trade conditions.

2008-08-05 vincentd
* Add two new parameter for jumping with the method Base_jumpToRelatedObject, one for